--- a/requirements.txt
+++ b/requirements.txt
@@ -1,274 +1,5 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.3
-aiosignal==1.4.0
-alembic==1.18.3
-altair==6.0.0
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-appdirs==1.4.4
-asgiref==3.11.0
-asn1crypto==1.5.1
-asttokens==3.0.1
-async-generator==1.10
-atpublic==7.0.0
-attrs==25.4.0
-auth0-python==4.13.0
-Authlib==1.3.1
-backoff==2.2.1
-bcrypt==5.0.0
-beautifulsoup4==4.14.3
-blinker==1.9.0
-boto3==1.42.39
-botocore==1.42.39
-build==1.4.0
-cachetools==6.2.6
-certifi==2026.1.4
-cffi==2.0.0
-cfgv==3.5.0
-charset-normalizer==3.4.4
-chroma-hnswlib==0.7.6
-chromadb==0.5.23
-click==8.3.1
-cohere==5.20.2
-coloredlogs==15.0.1
-compatibility==2.0.0
-crewai==0.100.1
-crewai-tools==0.32.0
-cryptography==46.0.4
-dataclasses-json==0.6.7
-decorator==5.2.1
-deprecation==2.1.0
-diskcache==5.6.3
-distlib==0.4.0
-distro==1.9.0
-docker==7.1.0
-docstring_parser==0.17.0
-docx2txt==0.9
-durationpy==0.10
-embedchain==0.1.126
-et_xmlfile==2.0.0
-executing==2.2.1
-fastapi==0.128.0
-fastavro==1.12.1
-filelock==3.20.3
-flatbuffers==25.12.19
-frozenlist==1.8.0
-fsspec==2026.1.0
-gitdb==4.0.12
-GitPython==3.1.46
-google-api-core==2.29.0
-google-auth==2.48.0
-google-cloud-aiplatform==1.135.0
-google-cloud-bigquery==3.40.0
-google-cloud-core==2.5.0
-google-cloud-resource-manager==1.16.0
-google-cloud-storage==3.8.0
-google-crc32c==1.8.0
-google-genai==1.61.0
-google-resumable-media==2.8.0
-googleapis-common-protos==1.72.0
-gptcache==0.1.44
-greenlet==3.3.1
-grpc-google-iam-v1==0.14.3
-grpcio==1.76.0
-grpcio-health-checking==1.76.0
-grpcio-status==1.76.0
-grpcio-tools==1.76.0
-h11==0.16.0
-h2==4.3.0
-hf-xet==1.2.0
-hpack==4.1.0
-httpcore==1.0.9
-httptools==0.7.1
-httpx==0.27.2
-httpx-sse==0.4.3
-huggingface-hub==0.36.0
-humanfriendly==10.0
-hyperframe==6.1.0
-identify==2.6.16
-idna==3.11
-ijson==3.4.0.post0
-importlib_metadata==8.7.1
-importlib_resources==6.5.2
-instructor==1.12.0
-ipython==9.9.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-Jinja2==3.1.6
-jiter==0.10.0
-jmespath==1.1.0
-joblib==1.5.3
-json5==0.13.0
-json_repair==0.55.1
-jsonpatch==1.33
-jsonpickle==4.1.1
-jsonpointer==3.0.0
-jsonref==1.1.0
-jsonschema==4.26.0
-jsonschema-specifications==2025.9.1
-kubernetes==35.0.0
-lance-namespace==0.4.5
-lance-namespace-urllib3-client==0.4.5
-lancedb==0.25.3
-langchain==0.3.18
-langchain-cohere==0.3.5
-langchain-community==0.3.17
-langchain-core==0.3.63
-langchain-experimental==0.3.4
-langchain-openai==0.2.14
-langchain-text-splitters==0.3.8
-langsmith==0.1.147
-linkup-sdk==0.10.0
-litellm==1.59.8
-Mako==1.3.10
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-marshmallow==3.26.2
-matplotlib-inline==0.2.1
-mdurl==0.1.2
-mem0ai==0.1.48
-mmh3==5.2.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.7.1
-mypy_extensions==1.1.0
-narwhals==2.16.0
-networkx==3.6.1
-nltk==3.9.2
-nodeenv==1.10.0
-numpy==1.26.4
-oauthlib==3.3.1
-onnxruntime==1.23.2
-openai==1.109.1
-openpyxl==3.1.5
-opentelemetry-api==1.39.1
-opentelemetry-exporter-otlp==1.39.1
-opentelemetry-exporter-otlp-proto-common==1.39.1
-opentelemetry-exporter-otlp-proto-grpc==1.39.1
-opentelemetry-exporter-otlp-proto-http==1.39.1
-opentelemetry-instrumentation==0.60b1
-opentelemetry-instrumentation-asgi==0.60b1
-opentelemetry-instrumentation-fastapi==0.60b1
-opentelemetry-proto==1.39.1
-opentelemetry-sdk==1.39.1
-opentelemetry-semantic-conventions==0.60b1
-opentelemetry-util-http==0.60b1
-orjson==3.11.6
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.2
-pandas==2.3.3
-parso==0.8.5
-patronus==0.0.18
-patronus-api==0.3.0
-pdfminer.six==20251230
-pdfplumber==0.11.9
-pexpect==4.9.0
-pillow==12.1.0
-platformdirs==4.5.1
-portalocker==3.2.0
-posthog==3.25.0
-pre_commit==4.5.1
-prompt_toolkit==3.0.52
-propcache==0.4.1
-proto-plus==1.27.0
-protobuf==6.33.5
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==23.0.0
-pyasn1==0.6.2
-pyasn1_modules==0.4.2
-pybase64==1.4.3
-pycparser==3.0
-pydantic==2.10.6
-pydantic-settings==2.12.0
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.2
-PyJWT==2.11.0
-pyOpenSSL==25.3.0
-pypdf==5.9.0
-pypdfium2==5.3.0
-PyPika==0.50.0
-pyproject_hooks==1.2.0
-pyright==1.1.408
-pysbd==0.3.4
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytube==15.0.0
-pytz==2024.2
-pyvis==0.3.2
-PyYAML==6.0.3
-qdrant-client==1.16.2
-referencing==0.37.0
-regex==2026.1.15
-requests==2.32.5
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==13.9.4
-rpds-py==0.30.0
-rsa==4.9.1
-s3transfer==0.16.0
-schema==0.7.8
-scrapegraph_py==1.46.0
-selenium==4.40.0
-serpapi==0.1.5
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-snowflake==1.0.2
-snowflake-connector-python==4.2.0
-snowflake._legacy==1.0.2
-snowflake.core==1.0.2
-sortedcontainers==2.4.0
-soupsieve==2.8.3
-spider_client==0.1.85
-SQLAlchemy==2.0.46
-stack-data==0.6.3
-starlette==0.50.0
-streamlit==1.53.1
-sympy==1.14.0
-tabulate==0.9.0
-tenacity==9.1.2
-tiktoken==0.7.0
-tokenizers==0.20.3
-toml==0.10.2
-tomli==2.4.0
-tomli_w==1.2.0
-tomlkit==0.14.0
-toonify==1.5.1
-tornado==6.5.4
-tqdm==4.67.2
-traitlets==5.14.3
-trio==0.32.0
-trio-typing==0.10.0
-trio-websocket==0.12.2
-typer==0.21.1
-typer-slim==0.21.1
-types-certifi==2021.10.8.3
-types-requests==2.32.4.20260107
-types-urllib3==1.26.25.14
-typing-inspect==0.9.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.3
-uuid_utils==0.14.0
-uv==0.9.28
-uvicorn==0.40.0
-uvloop==0.22.1
-validators==0.34.0
-virtualenv==20.36.1
-watchfiles==1.1.1
-wcwidth==0.5.3
-weaviate-client==4.10.4
-websocket-client==1.9.0
-websockets==15.0.1
-wrapt==1.17.3
-wsproto==1.3.2
-yarl==1.22.0
-zipp==3.23.0
-zstandard==0.23.0
+crewai
+crewai_tools
+streamlit
+nltk
+langchain_community
